# reasoning-reciting-probing

./: .gitattributes  .gitignore  activate_venv.sh  connect_to_snellius.sh  llama_utils.py  pyproject.toml  run_chess_dataset.py  run_test.sh  test.sh
code/: arithmetic.py  chess.py  combine_chunks.py  find_best_intervention_dir.py  generate_liref_directions.py  k_and_k.py  kk.py  liref_feature_sanity_check.py  liref_style_intervention.py  main.py  probe_chunk_job.py  probe_intervention.py  probe_llama.py  probe_utils.py  short_test.py  tune_intervention_dir_job.py
code/deprecated_liref_paper/: liref_feature_sanity_check.py  schedule_batch_job.py
code/deprecated_utilities/: main.py  publish_to_hf_hub.py
code/experiments/: arithmetic.py  chess.py  experiment_base.py  gsm_symbolic.py  kk.py  programming.py
code/jobs/: probe_chunk_job.py  tune_intervention_dir_job.py
code/utilities/: combine_chess_datasets.py  combine_chunks.py  inspect_dataset.py
code/utils/: arithmetic_utils.py  probe_utils.py  programming_utils.py
inputs/chess/: README.md
inputs/programming/: data.jsonl
notebooks/: analyze_tuning_results.ipynb
notebooks/notebooks/: arithmetic.ipynb  chess.ipynb  kk.ipynb  sanity_check.ipynb
results/: .txt  addition.txt
results/chess/: data-00000-of-00003.arrow  data-00001-of-00003.arrow  data-00002-of-00003.arrow  dataset_info.json  state.json
scripts/: README.md  activate_venv.sh  create_output_dir.sh  run_chunks_job.sh  run_experiment.sh  run_gpu_job.sh  run_gpu_job_live.sh  test.sh
scripts/intervention/: combine_chunks.sh  (+3 more)
(+124 files in other folders)
